<resources>
    <string name="app_name">RunControl</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_btn">Continue</string>
    <string name="permission_description">Welcome to Run Control. In order to use this application it will first need to request location permission from you. Otherwise it will not be able to work. If you agree and wish to continue, tap on the button below.</string>
    <string name="permission_required">Permission Required</string>
    <string name="tap_on_my_location_button">Tap on My Location Button.</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="reset_btn">Reset</string>
    <string name="go_count_down_timer">GO</string>
    <string name="timer_placeholder">3</string>
    <string name="distance_textView">Distance</string>
    <string name="time_textView">Time</string>
    <string name="distance0_placeholder">0 m</string>
    <string name="distance_placeholder">12.20 km</string>
    <string name="time_placeholder">00:00:00</string>
    <string name="share_btn">Share</string>
    <string name="date_placeholder">01/01/2001</string>
    <string name="avgPace_textView">Avg. Pace (min/km)</string>
    <string name="pace_textView">Pace</string>
    <string name="bestPace_textView">Fastest kilometer</string>
    <string name="bestAvgPaceForWorkout_textView">Best pace (min/km)</string>
    <string name="pace_placeholder">00:00</string>
    <string name="calories_placeholder">320</string>
    <string name="calories0_placeholder">0</string>
    <string name="workouts_placeholder">15</string>
    <string name="date_textView">Started</string>
    <string name="pace_zero_text_value">00:00</string>
    <string name="timer_zero_text_value">00:00:00</string>
    <string name="all_burned_kcal_textView">Burned kcal</string>
    <string name="burned_kcal_textView">Kcal burned</string>
    <string name="history_fragment_name">Control</string>
    <string name="map_fragment_name">Run</string>
    <string name="save_btn">Save</string>
    <string name="result_btn">Result</string>
    <string name="save_btn_saved">Saved</string>
    <string name="time">Time</string>
    <string name="pace_rowLayout">(min/km)</string>
    <string name="title_activity_details">detailsActivity</string>
    <string name="dateFull_placeholder">18:20 01/01/2022</string>
    <string name="remove_btn">Remove</string>
    <string name="recent_activities">Recent</string>
    <string name="week_activity">Week activity</string>
    <string name="show_more">More</string>
    <string name="show_all">All</string>
    <string name="date_chip">Date</string>
    <string name="time_chip">Time</string>
    <string name="distance_chip">Distance</string>
    <string name="calories_chip">Calories</string>
    <string name="global_stats_textView">Global statistics</string>
    <string name="allKilometers_textView">All kilometers run</string>
    <string name="workouts_textView">Workouts</string>
    <string name="stats_textView">Other statistics</string>


</resources>