<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="tracking"
            type="com.example.runcontrol.ui.maps.MapsFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/time_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/time_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timerValue_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_placeholder"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_textView" />

        <TextView
            android:id="@+id/distance_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/distance_textView"
            app:layout_constraintEnd_toStartOf="@+id/pace_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerValue_textView" />

        <TextView
            android:id="@+id/distanceValue_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/distance_textView"
            app:layout_constraintStart_toStartOf="@+id/distance_textView"
            app:layout_constraintTop_toBottomOf="@+id/distance_textView" />

        <TextView
            android:id="@+id/pace_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pace_textView"
            app:layout_constraintEnd_toEndOf="@+id/timerValue_textView"
            app:layout_constraintStart_toStartOf="@+id/timerValue_textView"
            app:layout_constraintTop_toBottomOf="@+id/timerValue_textView" />

        <TextView
            android:id="@+id/paceValue_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pace_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/pace_textView"
            app:layout_constraintStart_toStartOf="@+id/pace_textView"
            app:layout_constraintTop_toBottomOf="@+id/pace_textView" />

        <TextView
            android:id="@+id/calories_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/burned_kcal_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pace_textView"
            app:layout_constraintTop_toBottomOf="@+id/timerValue_textView" />

        <TextView
            android:id="@+id/caloriesValue_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_placeholder"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/calories_textView"
            app:layout_constraintStart_toStartOf="@+id/calories_textView"
            app:layout_constraintTop_toBottomOf="@+id/calories_textView" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/border_above"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/paceValue_textView" />

        <TextView
            android:id="@+id/timer_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_placeholder"
            android:textColor="@color/red"
            android:textSize="80sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hint_textView"
            observeTracking="@{tracking.started}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_on_my_location_button"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/start_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stop_btn"
            observeTracking="@{tracking.started}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/red"
            android:text="@string/stop_btn"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:backgroundTint="@color/orange"
            android:text="@string/reset_btn"
            android:visibility="invisible"
            app:icon="@drawable/ic_reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/result_btn"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/result_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/result_btn"
            app:icon="@drawable/ic_share"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/reset_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


