<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/runRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/run_cardView"
        app:layout_constraintStart_toStartOf="@+id/run_cardView"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginHorizontal="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/run_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/card_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/dateValue_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/date_placeholder"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/time"
                    style="@style/small_text"
                    app:layout_constraintEnd_toEndOf="@+id/timeValue_textView"
                    app:layout_constraintStart_toStartOf="@+id/timeValue_textView"
                    app:layout_constraintTop_toBottomOf="@+id/timeValue_textView" />

                <TextView
                    android:id="@+id/timeValue_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/time_placeholder"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dateValue_textView" />

                <TextView
                    android:id="@+id/distance_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/distance_textView"
                    style="@style/small_text"
                    app:layout_constraintEnd_toEndOf="@+id/distanceValue_textView"
                    app:layout_constraintStart_toStartOf="@+id/distanceValue_textView"
                    app:layout_constraintTop_toBottomOf="@+id/distanceValue_textView" />

                <TextView
                    android:id="@+id/distanceValue_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/distance_placeholder"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/timeValue_textView"
                    app:layout_constraintTop_toTopOf="@+id/timeValue_textView" />

                <TextView
                    android:id="@+id/pace_textView"
                    style="@style/small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/pace_textView"
                    app:layout_constraintStart_toEndOf="@+id/distanceValue_textView"
                    app:layout_constraintTop_toBottomOf="@+id/paceValue_textView" />

                <TextView
                    android:id="@+id/paceValue_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pace_placeholder"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/pace_textView"
                    app:layout_constraintEnd_toEndOf="@+id/pace_textView"
                    app:layout_constraintStart_toStartOf="@+id/pace_textView"
                    app:layout_constraintTop_toTopOf="@+id/distanceValue_textView" />

                <TextView
                    android:id="@+id/calories_textView"
                    style="@style/small_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/burned_kcal_textView"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/pace_textView"
                    app:layout_constraintTop_toBottomOf="@+id/caloriesValue_textView" />

                <TextView
                    android:id="@+id/caloriesValue_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calories_placeholder"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/calories_textView"
                    app:layout_constraintStart_toStartOf="@+id/calories_textView"
                    app:layout_constraintTop_toTopOf="@+id/paceValue_textView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>